# BMS-F16-ICP

./: .gitignore
F16_ICP/: CMakeLists.txt  ICPButton.qml  ICPWheel.qml  Main.qml  main.cpp  tcpclient.cpp  tcpclient.h
F16_ICP/android-sources/: AndroidManifest.xml
server/: commands.h  config.ini  main.cpp  server.pro  tcpserver.cpp  tcpserver.h
